--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/row.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/row.xml
@@ -22,7 +22,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/doge" />
+            android:src="@drawable/no_image" />
 
         <LinearLayout
             android:layout_width="match_parent"
