--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/specific_record.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/specific_record.xml
@@ -254,7 +254,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/photoGalleryView1"
@@ -265,7 +265,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/photoGalleryView2"
@@ -276,7 +276,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/photoGalleryView3"
@@ -287,7 +287,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/photoGalleryView4"
@@ -298,7 +298,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/photoGalleryView5"
@@ -309,7 +309,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
             </LinearLayout>
 
