--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
@@ -335,7 +335,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/imageView1"
@@ -346,7 +346,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
@@ -356,7 +356,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
 
                 <ImageView
                     android:id="@+id/imageView3"
@@ -367,7 +367,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="match_parent"
@@ -377,7 +377,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
                 <ImageView
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
@@ -387,7 +387,7 @@
                     android:layout_marginBottom="20dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/doge" />
+                    android:src="@drawable/no_image" />
             </LinearLayout>
 
         </LinearLayout>
