eveyrthing should run good pls i hope wow

--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/specific_record.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/specific_record.xml
@@ -249,6 +249,7 @@
                     android:id="@+id/photoGalleryView0"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -260,6 +261,7 @@
                     android:id="@+id/photoGalleryView1"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -271,6 +273,7 @@
                     android:id="@+id/photoGalleryView2"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -282,6 +285,7 @@
                     android:id="@+id/photoGalleryView3"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -293,6 +297,7 @@
                     android:id="@+id/photoGalleryView4"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -304,6 +309,7 @@
                     android:id="@+id/photoGalleryView5"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
