--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/login_account.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/login_account.xml
@@ -20,12 +20,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:fillViewport="true">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -33,6 +33,7 @@
                 android:layout_marginLeft="35dp"
                 android:layout_marginRight="35dp"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/settings_container"
                 android:orientation="vertical"
                 android:padding="10dp">
@@ -97,6 +98,7 @@
                 android:layout_gravity="center"
                 android:background="@drawable/button"
                 android:padding="10dp"
+                android:layout_marginBottom="20dp"
                 android:text="Log in"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
