--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/row.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/row.xml
@@ -10,7 +10,7 @@
         android:background="@drawable/allrec_recordpreview"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:layout_marginBottom="20dp">
+        android:layout_marginTop="20dp">
 
 
         <ImageView
