--- a/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
+++ b/Team16_Milestone2_TrackAHike/app/src/main/res/layout/stat_tracking.xml
@@ -63,19 +63,33 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"/>
 
-            <TextView
-                android:id="@+id/textView6"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/pagesubtitle"
-                android:gravity="start|center_vertical"
-                android:layout_marginBottom="20dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="Current stats:"
-                android:textSize="16sp"
-                android:textColor="@color/white" />
+                android:orientation="vertical"
+                android:layout_marginBottom="20dp">
+                <TextView
+                    android:id="@+id/textView6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="start|center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="10dp"
+                    android:text="Current stats:"
+                    android:textSize="16sp"
+                    android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="start|center_vertical"
+                    android:paddingLeft="20dp"
+                    android:paddingBottom="10dp"
+                    android:text="(Set personal metrics in Settings to \ntrack distance, calories, and speed)"
+                    android:textSize="14sp"
+                    android:textColor="@color/white" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/timeTextView"
@@ -330,6 +344,7 @@
                     android:id="@+id/imageView0"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -341,6 +356,7 @@
                     android:id="@+id/imageView1"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -362,6 +378,7 @@
                     android:id="@+id/imageView3"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -372,6 +389,7 @@
                     android:id="@+id/imageView4"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
@@ -382,6 +400,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:maxWidth="300dp"
                     android:layout_marginLeft="35dp"
                     android:layout_marginRight="35dp"
                     android:layout_marginBottom="20dp"
