--- a/Team16_Milestone3_TrackAHike/app/src/main/res/layout/login_account.xml
+++ b/Team16_Milestone3_TrackAHike/app/src/main/res/layout/login_account.xml
@@ -6,6 +6,19 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pagetitle"
+        android:gravity="start|center_vertical"
+        android:textColor="@color/white"
+        android:text="Track a Hike"
+        android:textSize="30dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp" />
+
+    <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
