--- a/Team16_Milestone3_TrackAHike/app/src/main/res/layout/register_account.xml
+++ b/Team16_Milestone3_TrackAHike/app/src/main/res/layout/register_account.xml
@@ -13,20 +13,21 @@
         android:gravity="start|center_vertical"
         android:textColor="@color/white"
         android:text="Track a Hike"
-        android:textSize="30dp"
+        android:textSize="24dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
-        android:paddingBottom="10dp" />
+        android:paddingBottom="10dp"
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/pagetitle"
+        android:background="@drawable/onerec_groupname"
         android:gravity="start|center_vertical"
         android:textColor="@color/white"
         android:text="Create a New User Profile"
-        android:textSize="24sp"
+        android:textSize="16sp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
