--- a/Team16_Milestone3_TrackAHike/app/src/main/res/layout/all_records.xml
+++ b/Team16_Milestone3_TrackAHike/app/src/main/res/layout/all_records.xml
@@ -47,6 +47,7 @@
             android:padding="10dp"
             android:text="Filter"
             android:textSize="14sp"
+            android:textColor="@color/white"
             android:onClick="filterRecords"/>
     </LinearLayout>
 
