--- a/Team16_Milestone3_TrackAHike/app/src/main/res/layout/stat_tracking.xml
+++ b/Team16_Milestone3_TrackAHike/app/src/main/res/layout/stat_tracking.xml
@@ -330,7 +330,9 @@
                     android:padding="10dp"
                     android:layout_marginRight="20dp"
                     android:layout_gravity="center"
-                    android:text="Take photo" />
+                    android:text="Take photo"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"/>
 
             </LinearLayout>
 
